include/blls.h


struct blls_control_type {
    bool f_indexing;
    int error;
    int out;
    int print_level;
    int start_print;
    int stop_print;
    int print_gap;
    int maxit;
    int cold_start;
    int preconditioner;
    int ratio_cg_vs_sd;
    int change_max;
    int cg_maxit;
    int arcsearch_max_steps;
    int sif_file_device;
    real_wp_ weight;
    real_wp_ infinity;
    real_wp_ stop_d;
    real_wp_ identical_bounds_tol;
    real_wp_ stop_cg_relative;
    real_wp_ stop_cg_absolute;
    real_wp_ alpha_max;
    real_wp_ alpha_initial;
    real_wp_ alpha_reduction;
    real_wp_ arcsearch_acceptance_tol;
    real_wp_ stabilisation_weight;
    real_wp_ cpu_time_limit;
    bool direct_subproblem_solve;
    bool exact_arc_search;
    bool advance;
    bool space_critical;
    bool deallocate_error_fatal;
    bool generate_sif_file;
    char sif_file_name[31];
    char prefix[31];
    struct sbls_control_type sbls_control;
    struct convert_control_type convert_control;
};
struct blls_time_type {
    real_sp_ total;
    real_sp_ analyse;
    real_sp_ factorize;
    real_sp_ solve;
};
struct blls_inform_type {
    int status;
    int alloc_status;
    int factorization_status;
    int iter;
    int cg_iter;
    real_wp_ obj;
    real_wp_ norm_pg;
    char bad_alloc[81];
    struct blls_time_type time;
    struct sbls_inform_type sbls_inform;
    struct convert_inform_type convert_inform;
};
void blls_initialize( void **data, 
                     struct blls_control_type *control,
                     int *status );
void blls_read_specfile( struct blls_control_type *control, 
                        const char specfile[] );
void blls_import( struct blls_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 int m,
                 const char A_type[], 
                 int A_ne, 
                 const int A_row[],
                 const int A_col[], 
                 const int A_ptr[] );
void blls_import_without_a( struct blls_control_type *control,
                            void **data,
                            int *status,
                            int n,
                            int m );
void blls_reset_control( struct blls_control_type *control,
                 void **data,
                 int *status );
void blls_solve_given_a( void **data,
                         void *userdata, 
                         int *status,
                         int n, 
                         int m,
                         int A_ne,
                         const real_wp_ A_val[], 
                         const real_wp_ b[], 
                         const real_wp_ x_l[], 
                         const real_wp_ x_u[], 
                         real_wp_ y[], 
                         real_wp_ z[], 
                         real_wp_ c[], 
                         real_wp_ g[], 
                         int x_stat[],
                         int (*eval_prec)(
                              int, const real_wp_[], 
                              real_wp_[], const void * ) );
void blls_solve_reverse_a_prod( void **data,
                                int *status,
                                int *eval_status, 
                                int n, 
                                int m,
                                const real_wp_ b[], 
                                const real_wp_ x_l[], 
                                const real_wp_ x_u[], 
                                real_wp_ y[], 
                                real_wp_ z[], 
                                real_wp_ c[], 
                                real_wp_ g[], 
                                int x_stat[],
                                real_wp_ v[], 
                                const real_wp_ p[],
                                int nz_v[], 
                                int *nz_v_start, 
                                int *nz_v_end,
                                const int nz_p[], 
                                int nz_p_end );
void blls_information( void **data,
                      struct blls_inform_type *inform,
                      int *status );
void blls_terminate( void **data, 
                    struct blls_control_type *control, 
                    struct blls_inform_type *inform );